# Safeguard-Subnet

./: .gitignore  ADVERSARIAL_RED_TEAMING_STUDY.md  DESIGN.md  Dockerfile  ETHICS.md  HITL_DESIGN.md  LICENSE  LOCAL_DEPLOY.md  README.md  RELAY_PROTOCOL.md  RELAY_PROTOCOL_V2.md  ROADMAP.md  THREAT_MODEL.md  _run_helpers.sh  cross_subnet_api.py  dashboard.py  dev-call-notes-2026-04-09.md  docker-compose.yml  env.example  epistula.py  feedback_pipeline.py  hitl_api.py  hitl_escalations.jsonl  llm_judge.py  pyproject.toml  report_data.py  report_generator.py  run_client_demo.sh  run_hitl_miner.sh  run_miner.sh  run_stack_local.sh  run_stack_test.sh  run_validator.sh  safety_report.md  target_configs.example.json  validator.py
test-miner/: main.py  prober.py  pyproject.toml
vali-django/: .dockerignore  .env.example  .gitignore  Dockerfile  PLAN.md  README.md  manage.py  pyproject.toml
vali-django/k8s/: deployment.yaml  ingress-tls.yaml  secret.example.yaml
vali-django/public/: queries.py  urls.py  views.py
vali-django/tests/: test_dispatch_focal_concern.py  test_dispatch_probes_per_miner.py  test_findings_browser.py  test_hitl_dispatch.py  test_provenance_golden.py  test_public_activity_feed.py  test_public_experiments.py  test_runs_browser.py  test_scoring_formula.py  test_targets_compare.py
vali-django/validator/: audit.py  context_processors.py  epistula.py  epistula_impl.py  harmbench_classifier.py  llm_judge_impl.py  logging_setup.py  loop.py  models.py  provenance.py  serializers.py  tests.py  urls.py  views.py  wallet.py  wallet_lock.py
vali-django/valiproject/: asgi.py  settings.py  (+2 more)
(+142 files in other folders)
