[project]
name = "safeguard"
version = "0.1.0"
description = "Bittensor subnet for AI safety red-teaming. Miners probe AI services for safety failures; validators verify probe quality; other subnet validators consume safety scores."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bittensor>=8.0.0",
    "bittensor-cli>=9.17.0",
    "bittensor-wallet>=2.0.0",
    "click>=8.0.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
