[project]
name = "safeguard-test-miner"
version = "0.1.0"
description = "Test miner for Safeguard subnet testnet validation. NOT a production miner."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "httpx>=0.27.0",
    "bittensor>=8.0.0",
    "bittensor-wallet>=2.0.0",
]
