[project]
name = "vali-django"
version = "0.1.0"
description = "Safeguard validator + customer portal as a single Django ASGI app"
requires-python = ">=3.11"
dependencies = [
    "Django>=5.0,<6.0",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "bittensor>=9.0",
    "bittensor-wallet>=3.0",
    "python-dotenv>=1.0",
    "psycopg2-binary>=2.9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["valiproject", "validator"]
